# aegisub

./: .gitignore  .gitmodules  .travis.yml  Aegisub.sln  CMakeLists.txt  Makefile.inc.in  README.md  acconf.h.in  aclocal.m4  authors.txt  configure  configure.ac
FFmpegSource/: MatroskaParser.h  ffaudiobase.cpp  ffbase.cpp  ffmatroskaaudiosource.cpp  ffmatroskasource.cpp  ffmpegaudiosource.cpp  ffmpegsource.avsi  ffmpegsource.cpp  ffmpegsource.h  ffmpegsource.html  ffmpegsource.txt  ffpp.cpp  ffshared.cpp  ffswscale.cpp  matroskacodecs.c  matroskacodecs.cpp  stdiostream.c  stdiostream.h
FFmpegSource2/: MatroskaParser.c  MatroskaParser.h  coparser.h  ffaudiosource.cpp  ffaudiosource.h  ffavisynth.cpp  ffavisynth.h  ffavsfilters.cpp  ffmpegsource2.html  ffms.cpp  ffms.h  ffms2.html  ffpp.cpp  ffpp.h  ffswscale.cpp  ffswscale.h  ffvideosource.cpp  ffvideosource.h  guids.h  indexing.cpp  indexing.h  stdiostream.c  stdiostream.h  utils.cpp  utils.h  wave64writer.cpp  wave64writer.h
FexTracker/: FexTrackingFeature.h
FexTrackerSource/: FexGenericFilter.cpp  FexGenericFilter_BaseFloatImage.cpp  FexGenericFilter_BaseFloatImageApply.h  FexGenericFilter_Contribution.h  FexGenericFilter_FexImage.cpp  FexGenericFilter_FexImageApply.h  FexGenericFilter_FilteringCore.h  FexGenericFilter_Include.h  FexGenericFilter_StaticFor.h  FexImgPyramid.cpp  FexImgPyramid.h  FexMovement.cpp  FexMovement.h  FexTracker.cpp  FexTracker.h  FexTrackerMovement.cpp  FexTrackingFeature.cpp  FexTrackingFeature.h  StdAfx.cpp  StdAfx.h  tenlist.h
OverLua/: overlua.cpp  overlua.h  readme.txt  vfr.cpp
SSATool/: AssemblyInfo.cs  Condition.cs  ConditionDialog.resx  DetectEncoding.cs  Evaluate.cs  Filter.cs  Form1.ja.resx  Form1.resx  InputBox.resx  Layer.cs  ListViewES.cs  ListViewES.resx  ManualTransform.cs  Notebox.cs  Resscale.cs  SSATool.csproj  SSATool.sln  SaveFileDialogWithEncoding.cs  Style.cs  TimeCodes.cs  effects.exml  formEffectsEditor.resx
aegilib/: aegilib.vcproj  aegilib_2008.vcproj  aegilib_icl.icproj  todo.txt
aegisub/: Aegisub.sln  Makefile.inc.in  VideoSink.cpp  VideoSink.h  acconf.h.in  aclocal.m4  aegisub_endian.h  ass_karaoke.cpp  ass_karaoke.h  ass_time.h  audio_player_alsa.cpp  audio_player_dsound.cpp  audio_player_dsound.h  audio_player_dsound2.cpp  audio_player_dsound2.h  audio_player_manager.h  audio_player_openal.cpp  audio_player_pulse.cpp  audio_provider.h  audio_provider_convert.cpp  audio_provider_convert.h  audio_provider_downmix.cpp  audio_provider_downmix.h  audio_provider_dummy.cpp  audio_provider_dummy.h  audio_provider_ffmpegsource.cpp  audio_provider_ffmpegsource.h  audio_provider_manager.h  audio_provider_pcm.cpp  audio_provider_pcm.h  audio_spectrum.cpp  audio_spectrum.h  auto4-status.txt  auto4_auto3.cpp  auto4_auto3.h  auto4_auto3_factory.h  auto4_base.cpp  auto4_base.h  auto4_lua.cpp  auto4_lua.h  (+167 more)
assdraw/: assdraw.vcproj  assdraw_2008.vcproj
athenasub/: aegilib.vcproj  aegilib_2008.vcproj  aegilib_icl.vcproj  athenasub_2008.vcproj
auto3/: auto3.c  auto3.h  auto3.sln  auto3.vcproj  callables.c
automation/: CMakeLists.txt  Makefile  Makefile.am  automation-lua.txt
avisynth_prs/: draw_prs.cpp  draw_prs.h  filter_main.cpp  prs_avisynth.vcproj
core/: FexMovement.h  FexTracker.h  FexTrackingFeature.h  about.cpp  about.h  aegisublocale.cpp  aegisublocale.h  aspell_wrap.cpp  aspell_wrap.h  ass_attachment.cpp  ass_attachment.h  ass_dialogue.cpp  ass_dialogue.h  ass_entry.cpp  ass_entry.h  ass_export_filter.cpp  ass_export_filter.h  ass_exporter.cpp  ass_exporter.h  ass_file.cpp  ass_file.h  ass_override.cpp  ass_override.h  ass_style.cpp  ass_style.h  ass_style_storage.cpp  ass_style_storage.h  ass_time.cpp  ass_time.h  audio_box.cpp  audio_box.h  audio_display.cpp  audio_display.h  audio_karaoke.cpp  audio_karaoke.h  audio_player.cpp  audio_player.h  audio_player_dsound.cpp  audio_player_dsound.h  audio_player_portaudio.cpp  (+189 more)
csri/: csri.vcproj  csri_2008.vcproj
docs/: aegisub_convert_docs.pl  convert.bat
installer/: aegisub.iss  aegisub.nsi  aegisub2.iss  latest.txt  license.txt
kanamemo/: game_display.h  game_window.h  kana_table.cpp  level.cpp  res.rc  switch_user.cpp  version.cpp
libaegisub/: CMakeLists.txt  Makefile
libaegisub/include/libaegisub/: type_name.h
libaegisub/lua/modules/: fs.cpp
libass/: libass.vcproj  libass_msvc.patch  msvc.h
lua51/: lua51_vc8.vcproj  lua51_vc9.vcproj
p-designer/: ass_drawing.cpp  ass_drawing.h  ass_drawing_control.h  p-designer.cpp  p-designer.vcproj  readme.txt
po/: aegisub.pot  cs.po  es.po  make_pot.bat  pt_BR.po
prs/: libprs.vcproj  png_wrap.cpp  png_wrap.h  prs.h  prs_display.cpp  prs_display.h  prs_entry.cpp  prs_entry.h  prs_file.cpp  prs_file.h  prs_image.cpp  prs_image.h  prs_specs.txt  prs_video_frame.cpp  prs_video_frame.h  prs_vsfilter_reader.cpp  prs_vsfilter_reader.h
specs/: ass-format-tests.ass
src/: CMakeLists.txt  Makefile  ass_attachment.cpp  audio_display.cpp  audio_display.h  auto4_lua.cpp  auto4_lua.h  auto4_lua_assfile.cpp  auto4_lua_dialog.cpp  auto4_lua_progresssink.cpp  auto5_support.cpp  dialog_dummy_video.cpp  dialog_progress.cpp  frame_main.cpp  grid_column.cpp  main.cpp  subs_edit_box.cpp  subs_edit_ctrl.cpp  subtitle_format_srt.cpp  subtitles_provider.cpp  utils.cpp  utils.h  validators.cpp  version.cpp  version.h  video_display.cpp  video_provider_ffmpegsource.cpp  video_provider_yuv4mpeg.cpp
src/command/: command.cpp  command.h  edit.cpp
tests/: CMakeLists.txt
tools/: CMakeLists.txt  respack.cpp
traydict/: TrayDict.vcproj  dict_window.cpp  dict_window.h  dictionary.cpp  dictionary.h  dictionary_display.cpp  dictionary_display.h  gecko_controller.cpp  gecko_controller.h  gecko_display.cpp  gecko_display.h  kana_table.cpp  kana_table.h  main.cpp  main.h  stdwx.h  systray.cpp  systray.h  text_file_reader.cpp  text_file_reader.h  unicodereplace.pl
unit_test/: unit_test.vcproj
universalchardet/: prcpucfg.h  universalcharset.vcproj  universalcharset_2008.vcproj
vsfilter/: Copy.cpp  DirectVobSub.cpp  DirectVobSubFilter.cpp  VSFilter.cpp  csriapi.cpp  plugins.cpp  (+5 more)
(+967 files in other folders)
