set(SOURCES
  aegisublocale.cpp
  ass_attachment.cpp
  ass_dialogue.cpp
  ass_entry.cpp
  ass_export_filter.cpp
  ass_exporter.cpp
  ass_file.cpp
  ass_karaoke.cpp
  ass_override.cpp
  ass_parser.cpp
  ass_style.cpp
  ass_style_storage.cpp
  async_video_provider.cpp
  audio_box.cpp
  audio_colorscheme.cpp
  audio_controller.cpp
  audio_display.cpp
  audio_karaoke.cpp
  audio_marker.cpp
  audio_player.cpp
  audio_player_alsa.cpp
  audio_player_dsound.cpp
  audio_player_dsound2.cpp
  audio_player_openal.cpp
  audio_player_oss.cpp
  audio_player_portaudio.cpp
  audio_player_pulse.cpp
  audio_provider_avs.cpp
  audio_provider_factory.cpp
  audio_provider_ffmpegsource.cpp
  audio_renderer.cpp
  audio_renderer_spectrum.cpp
  audio_renderer_waveform.cpp
  audio_timing_dialogue.cpp
  audio_timing_karaoke.cpp
  auto4_base.cpp
  auto4_lua.cpp
  auto4_lua_assfile.cpp
  auto4_lua_dialog.cpp
  auto4_lua_progresssink.cpp
  avisynth_wrap.cpp
  base_grid.cpp
  charset_detect.cpp
  colorspace.cpp
  colour_button.cpp
  compat.cpp
  context.cpp
  crash_writer.cpp
  dialog_about.cpp
  dialog_attachments.cpp
  dialog_automation.cpp
  dialog_autosave.cpp
  dialog_colorpicker.cpp
  dialog_detached_video.cpp
  dialog_dummy_video.cpp
  dialog_export.cpp
  dialog_export_ebu3264.cpp
  dialog_fonts_collector.cpp
  dialog_jumpto.cpp
  dialog_kara_timing_copy.cpp
  dialog_log.cpp
  dialog_paste_over.cpp
  dialog_progress.cpp
  dialog_properties.cpp
  dialog_resample.cpp
  dialog_search_replace.cpp
  dialog_selected_choices.cpp
  dialog_selection.cpp
  dialog_shift_times.cpp
  dialog_spellchecker.cpp
  dialog_style_editor.cpp
  dialog_style_manager.cpp
  dialog_styling_assistant.cpp
  dialog_text_import.cpp
  dialog_timing_processor.cpp
  dialog_translation.cpp
  dialog_version_check.cpp
  dialog_video_details.cpp
  dialog_video_properties.cpp
  export_fixstyle.cpp
  export_framerate.cpp
  ffmpegsource_common.cpp
  fft.cpp
  font_file_lister.cpp
  frame_main.cpp
  gl_text.cpp
  gl_wrap.cpp
  grid_column.cpp
  help_button.cpp
  hotkey.cpp
  hotkey_data_view_model.cpp
  initial_line_state.cpp
  main.cpp
  menu.cpp
  mkv_wrap.cpp
  pen.cpp
  persist_location.cpp
  preferences.cpp
  preferences_base.cpp
  project.cpp
  resolution_resampler.cpp
  search_replace_engine.cpp
  selection_controller.cpp
  spellchecker.cpp
  spellchecker_hunspell.cpp
  spline.cpp
  spline_curve.cpp
  string_codec.cpp
  subs_controller.cpp
  subs_edit_box.cpp
  subs_edit_ctrl.cpp
  subs_preview.cpp
  subtitle_format.cpp
  subtitle_format_ass.cpp
  subtitle_format_ebu3264.cpp
  subtitle_format_encore.cpp
  subtitle_format_microdvd.cpp
  subtitle_format_srt.cpp
  subtitle_format_ssa.cpp
  subtitle_format_transtation.cpp
  subtitle_format_ttxt.cpp
  subtitle_format_txt.cpp
  subtitles_provider.cpp
  subtitles_provider_csri.cpp
  subtitles_provider_libass.cpp
  text_file_reader.cpp
  text_file_writer.cpp
  text_selection_controller.cpp
  thesaurus.cpp
  timeedit_ctrl.cpp
  toggle_bitmap.cpp
  toolbar.cpp
  tooltip_manager.cpp
  utils.cpp
  validators.cpp
  vector2d.cpp
  version.cpp
  video_box.cpp
  video_controller.cpp
  video_display.cpp
  video_frame.cpp
  video_out_gl.cpp
  video_provider_avs.cpp
  video_provider_cache.cpp
  video_provider_dummy.cpp
  video_provider_ffmpegsource.cpp
  video_provider_manager.cpp
  video_provider_yuv4mpeg.cpp
  video_slider.cpp
  visual_feature.cpp
  visual_tool.cpp
  visual_tool_clip.cpp
  visual_tool_cross.cpp
  visual_tool_drag.cpp
  visual_tool_rotatexy.cpp
  visual_tool_rotatez.cpp
  visual_tool_scale.cpp
  visual_tool_vector_clip.cpp

  command/app.cpp
  command/audio.cpp
  command/automation.cpp
  command/command.cpp
  command/edit.cpp
  command/grid.cpp
  command/help.cpp
  command/keyframe.cpp
  command/recent.cpp
  command/subtitle.cpp
  command/time.cpp
  command/timecode.cpp
  command/tool.cpp
  command/video.cpp
  command/vis_tool.cpp

  MatroskaParser.c

  font_file_lister_coretext.mm
  osx/osx_utils.mm
  osx/retina_helper.mm
  )

set(HEADERS
  MatroskaParser.h
  aegisublocale.h
  ass_attachment.h
  ass_dialogue.h
  ass_entry.h
  ass_export_filter.h
  ass_exporter.h
  ass_file.h
  ass_info.h
  ass_karaoke.h
  ass_override.h
  ass_parser.h
  ass_style.h
  ass_style_storage.h
  async_video_provider.h
  audio_box.h
  audio_colorscheme.h
  audio_controller.h
  audio_display.h
  audio_karaoke.h
  audio_marker.h
  audio_player_portaudio.h
  audio_provider_factory.h
  audio_renderer.h
  audio_renderer_spectrum.h
  audio_renderer_waveform.h
  audio_rendering_style.h
  audio_timing.h
  auto4_base.h
  auto4_lua.h
  auto4_lua_factory.h
  avisynth.h
  avisynth_wrap.h
  base_grid.h
  block_cache.h
  charset_detect.h
  colorspace.h
  colour_button.h
  compat.h
  crash_writer.h
  dialog_detached_video.h
  dialog_export_ebu3264.h
  dialog_manager.h
  dialog_paste_over.h
  dialog_progress.h
  dialog_search_replace.h
  dialog_style_editor.h
  dialog_styling_assistant.h
  dialog_translation.h
  dialogs.h
  export_fixstyle.h
  export_framerate.h
  factory_manager.h
  ffmpegsource_common.h
  fft.h
  flyweight_hash.h
  font_file_lister.h
  format.h
  frame_main.h
  gl_text.h
  gl_wrap.h
  grid_column.h
  help_button.h
  hotkey_data_view_model.h
  initial_line_state.h
  main.h
  mkv_wrap.h
  options.h
  pen.h
  persist_location.h
  placeholder_ctrl.h
  preferences.h
  preferences_base.h
  project.h
  resolution_resampler.h
  retina_helper.h
  search_replace_engine.h
  selection_controller.h
  spellchecker_hunspell.h
  spline.h
  spline_curve.h
  string_codec.h
  subs_controller.h
  subs_edit_box.h
  subs_edit_ctrl.h
  subs_preview.h
  subtitle_format.h
  subtitle_format_ass.h
  subtitle_format_ebu3264.h
  subtitle_format_encore.h
  subtitle_format_microdvd.h
  subtitle_format_mkv.h
  subtitle_format_srt.h
  subtitle_format_ssa.h
  subtitle_format_transtation.h
  subtitle_format_ttxt.h
  subtitle_format_txt.h
  subtitles_provider_csri.h
  subtitles_provider_libass.h
  text_file_reader.h
  text_file_writer.h
  text_selection_controller.h
  thesaurus.h
  time_range.h
  timeedit_ctrl.h
  toggle_bitmap.h
  tooltip_manager.h
  utils.h
  validators.h
  value_event.h
  vector2d.h
  version.h
  video_box.h
  video_controller.h
  video_display.h
  video_frame.h
  video_out_gl.h
  video_provider_dummy.h
  video_provider_manager.h
  video_slider.h
  visual_feature.h
  visual_tool.h
  visual_tool_clip.h
  visual_tool_cross.h
  visual_tool_drag.h
  visual_tool_rotatexy.h
  visual_tool_rotatez.h
  visual_tool_scale.h
  visual_tool_vector_clip.h

  libresrc/libresrc.h

  include/aegisub/audio_player.h
  include/aegisub/context.h
  include/aegisub/hotkey.h
  include/aegisub/menu.h
  include/aegisub/spellchecker.h
  include/aegisub/subtitles_provider.h
  include/aegisub/toolbar.h
  include/aegisub/video_provider.h

  command/command.h
  )

add_library(resrc STATIC
  ${CMAKE_CURRENT_BINARY_DIR}/libresrc/default_config.cpp
  ${CMAKE_CURRENT_BINARY_DIR}/libresrc/bitmap.cpp
  ${CMAKE_CURRENT_BINARY_DIR}/libresrc/default_config.h
  ${CMAKE_CURRENT_BINARY_DIR}/libresrc/bitmap.h)
target_include_directories(resrc
  PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/libresrc
  PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/libresrc)

add_executable(aegisub ${SOURCES} ${HEADERS})
target_link_libraries(aegisub agi ass resrc wxcore wxstc wxgl wxxml z)
target_compile_definitions(aegisub PRIVATE -DHAVE_OPENGL_GL_H=1)
target_include_directories(aegisub PRIVATE include/aegisub .)

add_custom_command(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/libresrc/default_config.h ${CMAKE_CURRENT_BINARY_DIR}/libresrc/default_config.cpp
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/libresrc/manifest_osx.respack
  COMMAND respack ${CMAKE_CURRENT_SOURCE_DIR}/libresrc/manifest_osx.respack ${CMAKE_CURRENT_BINARY_DIR}/libresrc/default_config
)
add_custom_command(
  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/libresrc/bitmap.h ${CMAKE_CURRENT_BINARY_DIR}/libresrc/bitmap.cpp
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/bitmaps/manifest.respack
  COMMAND respack ${CMAKE_CURRENT_SOURCE_DIR}/bitmaps/manifest.respack ${CMAKE_CURRENT_BINARY_DIR}/libresrc/bitmap
)
